examples/misc/error/execution/index1.bfr
codegen $

$build {
  a: array(_) {
    i: index
  }
}

< a@i